--- a/client/src/pages/Home/Home.module.sass
+++ b/client/src/pages/Home/Home.module.sass
@@ -411,3 +411,52 @@
     background-color: #28D2D1
 
 
+.services
+  display: flex
+  flex-direction: column
+  align-items: center
+  width: 100vw
+  background-color: #1d80cb
+  padding-bottom: 50px
+
+  h2
+    color: white
+    padding: 50px 20px
+    margin: 0
+    
+  .service-description
+    margin-bottom: 20px
+    color: white
+
+  .service-cards
+    width: 1200px
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    justify-content: space-evenly
+
+  .service-card
+    display: flex
+    flex-direction: row
+    justify-content: space-between
+    align-items: center
+    width: 350px
+    height: 130px
+    border: 1px solid grey
+    border-radius: 5px
+    background: white
+    margin-bottom: 25px
+
+  h3
+    margin-top: 10px
+    margin-left: 20px
+    font-weight: bold
+
+  p
+    color: grey
+    padding-top: 25px
+    padding-left: 20px
+
+  i
+    padding-left: 15px
+
